Added Homepage link

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -51,5 +51,6 @@
             Cool for 15 minutes before slicing into 12 equal servings.
         </li>
     </ol>
+    <a href="../index.html">Homepage</a>
 </body>
 </html>
