--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Smoothie</title>
 </head>
 <body>
     <h1>Fruit and Yogurt Smoothie</h1>
+    
     <img src="images/fruit.jpg" alt="Smoothie">
 
     <h1>Ingredients</h1>
@@ -24,5 +25,6 @@
         <li>Combine all Ingredients in a blender</li>
         <li>Blend until smooth</li>
     </ol>
+    <a href="../index.html">Homepage</a>
 </body>
 </html>
